new deliverables individual proejct

--- a/homepage.html
+++ b/homepage.html
@@ -93,6 +93,7 @@
                         <td>
                             <ul class="proof">
                                 <li><a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Portfolio Iterations</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -102,6 +103,7 @@
                             <ul class="proof">
                                 <li><a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">Individual Project: Wireframes and Mockups</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Portfolio Iterations</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -109,7 +111,7 @@
                         <td>Learning Outcome 3: Software design and realisation</td>
                         <td>
                             <ul class="proof">
-                                <li></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: C4 Model</a></li>
                             </ul>
                         </td>
                     </tr>
