--- a/individualdeliverable1.html
+++ b/individualdeliverable1.html
@@ -86,7 +86,7 @@
             After conducting this research plan, several results came forward. In general, the structure of the portfolio is clear and easy to navigate through. However, some visual elements were mentioned several times, such as the text being too big, or unnecessary elements grabbing the attention.
           </p>
           <p class="company">
-            The information the users receive on screens are fine. To solutions to these pain points are several design changes, which means that there is nothing major that needs to be changed. This was something that I had expected, which can be seen in the hypotheses of the goals inside the document.
+            The information the users receive on screens are fine. The solutions to these pain points are several design changes, which means that there is nothing major that needs to be changed. This was something that I had expected, which can be seen in the hypotheses of the goals inside the document.
           </p>
         </div>
         <hr class="version">
@@ -96,7 +96,7 @@
     <div class="width">
       <h2 class="guide">NEXT STEPS</h2>
       <p class="desc">
-        After conducting my research plan with several users, I analyzed the gathered results, which helped me to iterate on my designs. These were mainly small design choice changes, but when I started developing I was still having update meetings with my semester coach Bardt. During these meetings, I showed my progress, and Bardt gave me advice on how to achieve the final goal I wanted.
+        After conducting my research plan with several users, I analyzed the gathered results, which helped me to iterate on my designs. These were mainly small design choice changes, but when I started developing I was still having update meetings. During these meetings, I received advice on how to achieve the final goal I was aiming for.
       </p>
     </div>
   </div>
