--- a/homepage.html
+++ b/homepage.html
@@ -94,6 +94,8 @@
                             <ul class="proof">
                                 <li><a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Portfolio Iterations</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Personas</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -104,6 +106,8 @@
                                 <li><a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">Individual Project: Wireframes and Mockups</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Portfolio Iterations</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Design Process</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -112,6 +116,7 @@
                         <td>
                             <ul class="proof">
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: C4 Model</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Proof Of Concepts</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -120,6 +125,7 @@
                         <td>
                             <ul class="proof">
                                 <li><a class="menu-link line" href="individualdeliverable3.html" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Project Plan</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -129,6 +135,7 @@
                             <ul class="proof">
                                 <li><a class="menu-link line" href="individualdeliverable4.html" target="_blank" rel="noopener noreferrer">Individual Project: Front-End Framework Research</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Reading Guide Document</a></li>
+                                <li><a class="menu-link line" href="individualdeliverable3.html" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -138,6 +145,8 @@
                             <ul class="proof">
                                 <li><a class="menu-link line" href="individualdeliverable5.html" target="_blank" rel="noopener noreferrer">Individual Project: Personal Evaluation and Reflection</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable6.html" target="_blank" rel="noopener noreferrer">Individual Project: Methods and Tooling</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Personal Evaluation and Reflection</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Methods and Tooling</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -146,6 +155,9 @@
                         <td>
                             <ul class="proof">
                                 <li><a class="menu-link line" href="individualdeliverable5.html" target="_blank" rel="noopener noreferrer">Individual Project: Personal Evaluation and Reflection</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Personal Evaluation and Reflection</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">International Project: Dutch Design Week</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">International Project: Malaga</a></li>
                             </ul>
                         </td>
                     </tr>
