--- a/homepage.html
+++ b/homepage.html
@@ -107,7 +107,7 @@
                                 <li><a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">Individual Project: Wireframes and Mockups</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Portfolio Iterations</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Design Process</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Design Processs</a></li>
                             </ul>
                         </td>
                     </tr>
