--- a/homepage.html
+++ b/homepage.html
@@ -117,6 +117,8 @@
                             <ul class="proof">
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: C4 Model</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Proof Of Concepts</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Working With Vue</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -147,6 +149,8 @@
                                 <li><a class="menu-link line" href="individualdeliverable6.html" target="_blank" rel="noopener noreferrer">Individual Project: Methods and Tooling</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Personal Evaluation and Reflection</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Methods and Tooling</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Working With Vue</a></li>
                             </ul>
                         </td>
                     </tr>
