added conclusions and nest steps

--- a/individualdeliverable2.html
+++ b/individualdeliverable2.html
@@ -81,6 +81,13 @@
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUJvSBrLB8Swfp0aRJS4jh0%2FPortfolio-Design%3Ftype%3Ddesign%26node-id%3D117%253A2%26mode%3Ddesign%26t%3DhBrazK1KSFYOijhg-1" allowfullscreen></iframe>      <hr class="version">
     </div>
   </div>
+  <div class="reveal">
+    <div class="width">
+      <h2 class="guide">NEXT STEPS</h2>
+      <p class="desc">With my designs ready, I was ready to set up my <a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a>. This research plan will help me to iterate on my portfolio, and most importantly validate the design I had created.</p>
+      <hr class="version">
+    </div>
+  </div>
   </main>
 
   <footer class="footer">
