--- a/individualdeliverable4.html
+++ b/individualdeliverable4.html
@@ -92,6 +92,13 @@
           <hr class="version">
         </div>
       </div>
+      <div class="reveal">
+        <div class="width">
+          <h2 class="guide">NEXT STEPS</h2>
+          <p class="desc">With the results gathered from this front-end framework research, I can apply my insights into other fields of the semester. I have learned about the use of different frameworks, and their advantages and disadvantages. In <a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Working With Vue</a> I made use of the suggested front-end framework.</p>
+          <hr class="version">
+        </div>
+      </div>
       <div class="company-btn">
         <a onclick="window.open('https://drive.google.com/file/d/1FA3AT8jZPo3y8uaHIXO28-XZpNmlGurg/view?usp=sharing')" class="explore-btn">Front-end Framework Resarch Document</a>
       </div>
