--- a/individualdeliverable1.html
+++ b/individualdeliverable1.html
@@ -98,7 +98,11 @@
       <p class="desc">
         After conducting my research plan with several users, I analyzed the gathered results, which helped me to iterate on my designs. These were mainly small design choice changes, but when I started developing I was still having update meetings. During these meetings, I received advice on how to achieve the final goal I was aiming for.
       </p>
+      <p class="desc">
+        The validated design for my portfolio was then used for the start of the development. By having created the designated style and structure in these wireframes and mockups, the start of the development process is straightforward.
+      </p>
     </div>
+    <hr class="version">
   </div>
   <div class="company-btn">
     <a onclick="window.open('https://drive.google.com/file/d/1QjnaEBBA_qTlO8SRhcUBT_4okBGEDblW/view?usp=sharing')" class="explore-btn">User Research Plan Document</a>
