--- a/individualdeliverable4.html
+++ b/individualdeliverable4.html
@@ -71,7 +71,7 @@
         <h2 class="guide">PRIMARY RESEARCH</h2>
         <h3 class="subtitle">Expert interview</h3>
         <p class="desc">
-          By making use of the expert interview from the DOT-framework, I would be able to get clarifaction on whether a front-end framework would assist me with creating my portfolio. Since my semestercoach Bardt is also a front-end architect, he has plenty of experience working with front-end frameworks.
+          By making use of the expert interview from the <a class="menu-link line" href="https://ictresearchmethods.nl/" target="_blank" rel="noopener noreferrer">DOT-Framework</a>, I would be able to get clarifaction on whether a front-end framework would assist me with creating my portfolio. Since my semestercoach Bardt is also a front-end architect, he has plenty of experience working with front-end frameworks.
         </p>
         <p class="desc">
           I prepared several questions, and during the expert interview, it has clarified that the use of a front-end framework for this project would not be of any added value, because of the limited time that was left, and that I should work with the knowledge that I already have.
