--- a/individualdeliverable5.html
+++ b/individualdeliverable5.html
@@ -34,10 +34,10 @@
     <div class="width">
         <h2 class="guide">JUDGEMENT & COMMUNICATION</h2>
             <p class="desc">
-              With the help of communicating with my semestercoach (Bardt), and with fellow students during this semester, I have worked towards a solid start to my portfolio for this semester. I held weekly meetings with Bardt, where we discusses plenty of things related to the project. Eventually, I had solidly defined my research questions, and fortunately I have been able to answer all of them.
+              With the help of communicating with my semestercoach, and with fellow students during this semester, I have worked towards a solid start to my portfolio for this semester. I held weekly meetings with Bardt, where we discusses plenty of things related to the project. Eventually, I had solidly defined my research questions, and fortunately I have been able to answer all of them.
             </p>
             <p class="desc">
-              I mainly used the DOT-framework, and Nielsen Norman Group to answer my research questions. In previous semester I have used methods from these sources as well, which caused me to build up trust and reuse these sources.
+              I mainly used the <a class="menu-link line" href="https://ictresearchmethods.nl/" target="_blank" rel="noopener noreferrer">DOT-Framework</a>, and Nielsen Norman Group to answer my research questions. In previous semester I have used methods from these sources as well, which caused me to build up trust and reuse these sources.
             </p>
             <p class="desc">
               I documented my work in a methodical order, using the research cycle. While working iteratively on my design, I was consistently conducting (user) research to keep generating new possibilities. 
