added some more deliverbals

--- a/homepage.html
+++ b/homepage.html
@@ -106,8 +106,9 @@
                                 <li><a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">Individual Project: Wireframes and Mockups</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Portfolio Iterations</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Research Methods Research</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Design Processs</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Design Process</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -116,6 +117,8 @@
                         <td>
                             <ul class="proof">
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: C4 Model</a></li>
+                                <li><a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">Individual Project: Wireframes and Mockups</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Design Process</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Proof Of Concepts</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Working With Vue</a></li>
@@ -128,6 +131,8 @@
                             <ul class="proof">
                                 <li><a class="menu-link line" href="individualdeliverable3.html" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Project Plan</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: The SCRUM Master</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -138,6 +143,8 @@
                                 <li><a class="menu-link line" href="individualdeliverable4.html" target="_blank" rel="noopener noreferrer">Individual Project: Front-End Framework Research</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Reading Guide Document</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable3.html" target="_blank" rel="noopener noreferrer">Individual Project: Project Plan</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Research Methods Research</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
                             </ul>
                         </td>
                     </tr>
