links and changes

--- a/individualdeliverable1.html
+++ b/individualdeliverable1.html
@@ -66,9 +66,8 @@
     <div class="width">
         <h2 class="guide">METHODOLOGY</h2>
         <p class="desc">
-          After knowing who I would need to gather insights, I had to create a plan of approach for the methodology. I often use Nielsen Norman Group to pick suitable research methods. This is mainly because they offer thorough explanation on executing these research methods.
-          Since I knew what my goals were, I quickly got to some suitable research methods. The portfolio is not that big, so two to three methods would suffice to gain insights on all aspects of the portfolio. The research methods are conducted one on one with the user:
-
+          After knowing who I would need to gather insights, I had to create a plan of approach for the methodology. I often use <a class="menu-link line" href="https://www.nngroup.com/articles/which-ux-research-methods/" target="_blank" rel="noopener noreferrer">Nielsen Norman Group</a> to pick suitable research methods. This is mainly because they offer thorough explanation on executing these research methods.
+          Since I knew what my goals were, I quickly got to some suitable research methods. The portfolio is relatively small, so two to three methods would suffice to gain insights on all aspects of the portfolio. The research methods are conducted one on one with the user:
         </p>
         <ul class="target-list">
           <li>Short user interview (to clarify the target group)</li>
@@ -96,10 +95,10 @@
     <div class="width">
       <h2 class="guide">NEXT STEPS</h2>
       <p class="desc">
-        After conducting my research plan with several users, I analyzed the gathered results, which helped me to iterate on my designs. These were mainly small design choice changes, but when I started developing I was still having update meetings. During these meetings, I received advice on how to achieve the final goal I was aiming for.
+        After conducting my research plan with several users, I analyzed the gathered results, which helped me to iterate on my <a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">designs</a>. These were mainly small design choice changes, but when I started developing I was still having update meetings. During these meetings, I received advice on how to achieve the final goal I was aiming for.
       </p>
       <p class="desc">
-        The validated design for my portfolio was then used for the start of the development. By having created the designated style and structure in these wireframes and mockups, the start of the development process is straightforward.
+        The validated design for my portfolio will then be used for the start of the development. By having created the designated style and structure in these wireframes and mockups, the start of the development process is straightforward.
       </p>
     </div>
     <hr class="version">
