--- a/individualdeliverable2.html
+++ b/individualdeliverable2.html
@@ -46,7 +46,7 @@
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUJvSBrLB8Swfp0aRJS4jh0%2FPortfolio-Design%3Ftype%3Ddesign%26node-id%3D0%253A1%26mode%3Ddesign%26t%3DhBrazK1KSFYOijhg-1" allowfullscreen></iframe>      
       </div>
       <p class="desc">
-        These wireframes were very low fidelity, but after using peer feedback I could validate that the structure of the portfolio was clear. This meant that I could quickly start with the actual design of the portfolio.
+        These wireframes were very low fidelity, but after making use of <a class="menu-link line" href="https://ictresearchmethods.nl/showroom/peer-review/" target="_blank" rel="noopener noreferrer">peer review</a> I could validate that the structure of the portfolio was clear. This meant that I could quickly start with the actual design of the portfolio.
       </p>
       <hr class="version">
     </div>
@@ -67,7 +67,7 @@
   <div class="reveal">
     <div class="width">
       <p class="desc">
-        After finishing my design, I turned my mockups into a functional prototype. This is the prototype I used to execute my USER RESEARCH PLAN. After having executed this user research plan, I noticed that the overall structure is clear, but the portfolio was still missing some features. I decided to create a diagram of the final structure. This structure still has the same idea, but with added features, such as the competence table, and other additional projects.
+        After finishing my design, I turned my mockups into a functional prototype. This is the prototype I used to execute my <a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">user research plan</a>. After having executed this user research plan, I noticed that the overall structure is clear, but the portfolio was still missing some features. I decided to create a diagram of the final structure. This structure still has the same idea, but with added features, such as the competence table, and other additional projects.
       </p>
       <div class="wireframe">
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUJvSBrLB8Swfp0aRJS4jh0%2FPortfolio-Design%3Ftype%3Ddesign%26node-id%3D115%253A252%26mode%3Ddesign%26t%3DhBrazK1KSFYOijhg-1" allowfullscreen></iframe>    
@@ -76,7 +76,7 @@
   </div>
   <div class="reveal">
     <div class="width">
-      <p class="desc">Adding these additional features, meant that these also needed to be worked out. Something I realized during update meetings with Bardt, is that the competence table really acts as the core of the portfolio, where the proof is gathered. This meant that I took some time to work out the design of the competence table, which can be seen down below. </p>
+      <p class="desc">Adding these additional features, meant that these also needed to be worked out. Something I realized during update meetings, is that the competence table really acts as the core of the portfolio, where the proof is gathered. This meant that I took some time to work out the design of the competence table, which can be seen down below. </p>
       <div class="wireframe">
         <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1130" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FUJvSBrLB8Swfp0aRJS4jh0%2FPortfolio-Design%3Ftype%3Ddesign%26node-id%3D117%253A2%26mode%3Ddesign%26t%3DhBrazK1KSFYOijhg-1" allowfullscreen></iframe>      <hr class="version">
     </div>
@@ -84,7 +84,7 @@
   <div class="reveal">
     <div class="width">
       <h2 class="guide">NEXT STEPS</h2>
-      <p class="desc">With my designs ready, I was ready to set up my <a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">Individual Project: User Research Plan</a>. This research plan will help me to iterate on my portfolio, and most importantly validate the design I had created.</p>
+      <p class="desc">With my designs ready, I was ready to set up my <a class="menu-link line" href="individualdeliverable1.html" target="_blank" rel="noopener noreferrer">user research plan</a>. This research plan will help me to iterate on my portfolio, and most importantly validate the design I had created. If any improvements are the results of this user research plan, I will iteratevily rework the portfolio.</p>
       <hr class="version">
     </div>
   </div>
