--- a/individualdeliverable4.html
+++ b/individualdeliverable4.html
@@ -43,10 +43,10 @@
         <h2 class="guide">CONTEXT</h2>
         <div class="column">
           <p class="company">
-            During my studies at Fontys ICT, I have programmed mainly in JavaScript, but I have never before worked with a front-end framework. This is the reason why I wanted to research whether the individual project is the right place to apply learning a front-end framework.
+            During my studies at Fontys ICT, I have programmed mainly in JavaScript, but I have never before worked with a front-end framework. This is the reason why I wanted to research whether the individual project is applicable for learning a front-end framework.
           </p>
           <p class="company">
-            While I was working on my third-year internship, I noticed that all of the company's web applications are built with the help of a front-end framework. Hence why I have gotten interest in learning a front-end framework. During, and after my internship I have not gotten the chance to start learning, but this semester seems like a right time.
+            While I was working on my third-year internship, I noticed that all of the company's web applications are built with the help of a front-end framework. Hence why I have gotten interest in learning a front-end framework. During, and after my internship I have not gotten the chance to start learning, but this semester seems like the right time.
           </p>
         </div>
       </div>
@@ -61,7 +61,7 @@
         </ul>
         <p class="desc">
           After having my research question, I set up specific terms which I used to conduct my secondary research, in order to answer my research question. Using mainly articles, YouTube video's and blogs, I noticed that I was not able to answer my research question,
-          since all of my sources concluded the same thing: it all comes down to personal preference. This was an answer I could not do anything with, which meant that I had to dive deeper into research.
+          since all of my sources concluded the same thing: it all comes down to personal preference. This was an answer I could not draw proper conclusions from, which meant that I had to dive deeper into research.
         </p>
       </div>
       <hr class="version">
@@ -71,7 +71,7 @@
         <h2 class="guide">PRIMARY RESEARCH</h2>
         <h3 class="subtitle">Expert interview</h3>
         <p class="desc">
-          By making use of the expert interview from the <a class="menu-link line" href="https://ictresearchmethods.nl/" target="_blank" rel="noopener noreferrer">DOT-Framework</a>, I would be able to get clarifaction on whether a front-end framework would assist me with creating my portfolio. Since my semestercoach Bardt is also a front-end architect, he has plenty of experience working with front-end frameworks.
+          By making use of the <a class="menu-link line" href="https://ictresearchmethods.nl/library/expert-interview/" target="_blank" rel="noopener noreferrer">expert interview</a> from the <a class="menu-link line" href="https://ictresearchmethods.nl/" target="_blank" rel="noopener noreferrer">DOT-Framework</a>, I would be able to get clarifaction on whether a front-end framework would assist me with creating my portfolio. Since my semestercoach Bardt is also a front-end architect, he has plenty of experience working with front-end frameworks.
         </p>
         <p class="desc">
           I prepared several questions, and during the expert interview, it has clarified that the use of a front-end framework for this project would not be of any added value, because of the limited time that was left, and that I should work with the knowledge that I already have.
