added some more deliverables

--- a/homepage.html
+++ b/homepage.html
@@ -133,6 +133,7 @@
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: Portfolio Iterations</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Personas</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: User Testing Plan</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Working With Vue</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -155,7 +156,7 @@
                             <ul class="proof">
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Individual Project: C4 Model</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable2.html" target="_blank" rel="noopener noreferrer">Individual Project: Wireframes and Mockups</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Design Process</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Design Contribution</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Proof Of Concepts</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Working With Vue</a></li>
@@ -192,10 +193,13 @@
                             <ul class="proof">
                                 <li><a class="menu-link line" href="individualdeliverable5.html" target="_blank" rel="noopener noreferrer">Individual Project: Personal Evaluation and Reflection</a></li>
                                 <li><a class="menu-link line" href="individualdeliverable6.html" target="_blank" rel="noopener noreferrer">Individual Project: Methods and Tooling</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Personal Evaluation and Reflection</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: The SCRUM Master</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: (Personal) Evaluation and Reflection</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Methods and Tooling</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Update Presentation</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Broken Car Challenge</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Working With Vue</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
                             </ul>
                         </td>
                     </tr>
@@ -204,7 +208,8 @@
                         <td>
                             <ul class="proof">
                                 <li><a class="menu-link line" href="individualdeliverable5.html" target="_blank" rel="noopener noreferrer">Individual Project: Personal Evaluation and Reflection</a></li>
-                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Personal Evaluation and Reflection</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: (Personal) Evaluation and Reflection</a></li>
+                                <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Group Project: Update Presentation</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">International Project: Dutch Design Week</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">International Project: Malaga</a></li>
                                 <li><a class="menu-link line" href="" target="_blank" rel="noopener noreferrer">Personal Project: Finding Internship</a></li>
@@ -229,6 +234,12 @@
                     <img src="./images/hongkong.jpg" alt="" class="grid-img">
                     <section class="project-info">
                         <h1 class="projectname">Group Project</h1>
+                    </section>                        
+                </div>
+                <div class="project" style="cursor: pointer;">
+                    <img src="./images/hongkong.jpg" alt="" class="grid-img">
+                    <section class="project-info">
+                        <h1 class="projectname">International Project</h1>
                     </section>                        
                 </div>
                 <div class="project" style="cursor: pointer;">
